# hasha

./: Cargo.toml  README.md  build.ps1
chocolatey/: package.nuspec
chocolatey/tools/: ChocolateyInstall.ps1
cli/: Cargo.toml
cli/src/: main.rs
cli/src/command/: diff.rs  generate.rs  verify.rs
cli/src/ui/: cli.rs  fancy.rs  mod.rs
lib/: Cargo.toml
lib/src/: lib.rs  ui.rs
lib/src/checksum_set/: builder.rs  diff.rs  load.rs  mod.rs  verify.rs  write.rs
lib/src/util/: mod.rs  time.rs
src/: error.rs  main.rs
src/checksum_set/: builder.rs  diff.rs  hasher.rs  mod.rs  verify.rs
src/command/: calculate.rs  diff.rs  generate.rs  mod.rs  verify.rs
src/hasher/: mod.rs
src/ui/: cli.rs  fancy.rs  mod.rs
src/util/: hash.rs  mod.rs  path.rs
