[package]
name = "hasha"
version = "0.1.0"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/forbjok/hasha.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
blake2 = "0.10.4"
blake3 = "1.3.1"
byteorder = "1.4.3"
clap = { version = "3.2.15", features = ["derive"] }
crc32fast = "1.3.2"
hex = "0.4.3"
indicatif = "0.16.2"
md-5 = "0.10.1"
serde = "1.0.140"
serde_derive = "1.0.140"
serde_json = { version = "1.0.82", features = ["preserve_order"] }
sha1 = "0.10.1"
sha2 = "0.10.2"
sha3 = "0.10.1"
strum = "0.24.1"
strum_macros = "0.24.2"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
walkdir = "2.3.2"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
