[workspace]
resolver = "2"

members = [
  "cli",
  "lib",
]

[workspace.dependencies]
anyhow = "1.0.75"
blake2 = "0.10.6"
blake3 = "1.4.1"
byteorder = "1.4.3"
clap = "4.4.1"
crc32fast = "1.3.2"
hex = "0.4.3"
indicatif = "0.17.6"
md-5 = "0.10.5"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.105"
sha1 = "0.10.5"
sha2 = "0.10.7"
sha3 = "0.10.8"
strum = "0.25.0"
strum_macros = "0.25.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
walkdir = "2.3.3"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
