[workspace]
resolver = "2"

members = [
  "cli",
  "lib",
]

[workspace.dependencies]
anyhow = "1.0.86"
blake2 = "0.10.6"
blake3 = "1.5.4"
byteorder = "1.5.0"
clap = "4.5.16"
crc32fast = "1.4.2"
hex = "0.4.3"
indicatif = "0.17.8"
md-5 = "0.10.6"
serde = "1.0.209"
serde_derive = "1.0.209"
serde_json = "1.0.127"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha3 = "0.10.8"
strum = "0.26.3"
strum_macros = "0.26.4"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
