[package]
name = "hasha_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "hasha"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.15", features = ["derive"] }
hasha = { path = "../lib" }
indicatif = "0.17.0"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
