[package]
name = "kecs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/forbjok/kecs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
blake2 = "0.10.6"
blake3 = "1.4.1"
byteorder = "1.4.3"
crc32fast = "1.3.2"
hex = "0.4.3"
md-5 = "0.10.5"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = { version = "1.0.105", features = ["preserve_order"] }
sha1 = "0.10.5"
sha2 = "0.10.7"
sha3 = "0.10.8"
strum = "0.25.0"
strum_macros = "0.25.2"
tracing = "0.1.37"
walkdir = "2.3.3"
