[package]
name = "kecs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/forbjok/kecs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
blake2 = { workspace = true }
blake3 = { workspace = true }
byteorder = { workspace = true }
crc32fast = { workspace = true }
hex = { workspace = true }
md-5 = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true, features = ["preserve_order"] }
sha1 = { workspace = true }
sha2 = { workspace = true }
sha3 = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
tracing = { workspace = true }
walkdir = { workspace = true }
